--- a/Static_Projects/mainProjectBasic/index.html
+++ b/Static_Projects/mainProjectBasic/index.html
@@ -28,63 +28,63 @@
     <section class="projects" id="projects">
         <h2>My Basic Projects</h2>
         <div class="project-grid">
-            <a href="../01_tic_tac_toe/basic/index.html" class="project-card">
+            <a href="../01_tic_tac_toe/index.html" class="project-card">
                 <h3>Tic Tac Toe Game</h3>
                 <p>A classic game of Tic Tac Toe built with HTML, CSS, and JavaScript.</p>
             </a>
-            <a href="../02_weather_application/basic/index.html" class="project-card">
+            <a href="../02_weather_application/index.html" class="project-card">
                 <h3>Weather Application</h3>
                 <p>An application that provides real-time weather data.</p>
             </a>
-            <a href="../03_Ecommerse_Website/basic/index.html" class="project-card">
+            <a href="../03_Ecommerse_Website/index.html" class="project-card">
                 <h3>E-commerce Website</h3>
                 <p>An online store platform with product listings and a shopping cart.</p>
             </a>
-            <a href="../04_crypto_tracker/basic/index.html" class="project-card">
+            <a href="../04_crypto_tracker/index.html" class="project-card">
                 <h3>Crypto Tracker</h3>
                 <p>A tool to track cryptocurrency prices and trends.</p>
             </a>
-            <a href="../06_calculator/basic/index.html" class="project-card">
+            <a href="../06_calculator/index.html" class="project-card">
                 <h3>Calculator</h3>
                 <p>A simple calculator application for basic arithmetic operations.</p>
             </a>
-            <a href="../07_ToDo_List/basic/index.html" class="project-card">
+            <a href="../07_ToDo_List/index.html" class="project-card">
                 <h3>To-Do List</h3>
                 <p>A task manager to help you keep track of your daily tasks.</p>
             </a>
-            <a href="../09_social_Media_Platform/basic/index.html" class="project-card">
+            <a href="../09_social_Media_Platform/index.html" class="project-card">
                 <h3>Social Media Platform</h3>
                 <p>A platform for users to connect, share, and communicate.</p>
             </a>
-            <a href="../10_Habit_Tracker/basic/index.html" class="project-card">
+            <a href="../10_Habit_Tracker/index.html" class="project-card">
                 <h3>Habit Tracker</h3>
                 <p>An application that track your daily habit with the time.</p>
             </a>
-            <a href="../11_Task_Management_Tool/basic/index.html" class="project-card">
+            <a href="../11_Task_Management_Tool/index.html" class="project-card">
                 <h3>Task Management Tool</h3>
                 <p>A tool designed to manage tasks and projects efficiently.</p>
             </a>
-            <a href="../12_Fitness_Tracker/basic/index.html" class="project-card">
+            <a href="../12_Fitness_Tracker/index.html" class="project-card">
                 <h3>Fitness Tracker</h3>
                 <p>An app to track fitness goals and workouts.</p>
             </a>
-            <a href="../14_Recipe_Finder/basic/project1/index.html" class="project-card">
+            <a href="../14_Recipe_Finder/project1/index.html" class="project-card">
                 <h3>Recipe Finder - 1</h3>
                 <p>An application to discover recipes based on ingredients.</p>
             </a>
-            <a href="../14_Recipe_Finder/basic/project2/index.html" class="project-card">
+            <a href="../14_Recipe_Finder/project2/index.html" class="project-card">
                 <h3>Recipe Finder - 2</h3>
                 <p>An application to discover recipes based on ingredients.</p>
             </a>
-            <a href="../15_quiz_app/basic/index.html" class="project-card">
+            <a href="../15_quiz_app/index.html" class="project-card">
                 <h3>Quiz App</h3>
                 <p>An interactive quiz application for testing knowledge.</p>
             </a>
-            <a href="../16_Video_Streaming/basic/index.html" class="project-card">
+            <a href="../13_Video_Streaming/index.html" class="project-card">
                 <h3>Video Streaming</h3>
                 <p>A platform for streaming and sharing videos.</p>
             </a>
-            <a href="../05_Stock_Market_Tracker/basic/index.html" class="project-card">
+            <a href="../05_Stock_Market_Tracker/index.html" class="project-card">
                 <h3>Stock Market Tracker</h3>
                 <p>An app that tracks stock prices and market trends.</p>
             </a>
